# wifi-dataset

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  correctBags.py  install_cartographer.sh
carto_ws/src/: .rosinstall  .rosinstall.bak
catkin_ws/src/manual_measurements/: CMakeLists.txt  package.xml
catkin_ws/src/manual_measurements/launch/: debug.launch
catkin_ws/src/manual_measurements/msg/: AccessPointInfo.msg  AccessPointsInfo.msg  WifiInfo.msg
catkin_ws/src/manual_measurements/nodes/: measure.py  measure_iwlist.py  measure_scapy.py
catkin_ws/src/manual_measurements/scripts/: measure_scapy2.py
env/: carto.rosinstall  catkin.rosinstall  setup.sh  turtlebot_master.sh  ws.sh
scripts/: collect.sh  correct2.sh  correctBags.py  correct_ts.py  correct_ts.sh  extract_img_data.py  generate_gt.sh  getScans.py  install.sh  plotTrajectory.py  ts1.py  tsFix.py  write3d.sh
